infra/analytic-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: analytic-depl
    labels:
        app: analytic
spec:
    replicas: 1
    template:
        metadata:
            name: analytic
            labels:
                app: analytic
        spec:
            containers:
                - name: analytic
                  image: espressotrip/concept-analytic
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: analytic

---
apiVersion: v1
kind: Service
metadata:
    name: analytic-service
spec:
    selector:
        app: analytic
    ports:
        - port: 3000
          targetPort: 3000
          name: analytic
        - port: 50051
          targetPort: 50051
          name: grpc
