infra/auth-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-api-depl
    labels:
        app: auth-api
spec:
    replicas: 1
    template:
        metadata:
            name: auth-api
            labels:
                app: auth-api
        spec:
            containers:
                - name: auth-api
                  image: espressotrip/concept-auth-api
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: auth-api

---
apiVersion: v1
kind: Service
metadata:
    name: auth-api-srv
spec:
    selector:
        app: auth-api
    ports:
        - port: 3000
          targetPort: 3000
          name: auth-api
