infra/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-depl
    labels:
        app: auth
spec:
    replicas: 1
    template:
        metadata:
            name: auth
            labels:
                app: auth
        spec:
            containers:
                - name: auth
                  image: espressotrip/concept-auth
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: auth

---
apiVersion: v1
kind: Service
metadata:
    name: auth-service
spec:
    selector:
        app: auth
    ports:
        - port: 3000
          targetPort: 3000
          name: auth
