infra/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: product-depl
    labels:
        app: product
spec:
    replicas: 1
    template:
        metadata:
            name: product
            labels:
                app: product
        spec:
            containers:
                - name: product
                  image: espressotrip/concept-product
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: product

---
apiVersion: v1
kind: Service
metadata:
    name: product-service
spec:
    selector:
        app: product
    ports:
        - port: 3000
          targetPort: 3000
          name: product
