infra/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
  labels:
    app: rabbit
spec:
  replicas: 1
  template:
    metadata:
      name: rabbit
      labels:
        app: rabbit
    spec:
      containers:
        - name: rabbitmq-server
          image: rabbitmq:management-alpine
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: rabbit
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-server-service
spec:
  selector:
    app: rabbit
  ports:
    - port: 5672
      targetPort: 5672
      name: rabbit
    - port: 15762
      targetPort: 15672
      name: rabbit-dash
