infra/concept-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: concept-ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    rules:
        - host: concept.dev
          http:
              paths:
                  # Product API
                  - path: /api/product/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: product-service
                            port:
                                number: 3000
                # Auth API
                  - path: /api/auth/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-service
                            port:
                                number: 3000
                # Analytics API
                  - path: /api/analytic/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: analytic-service
                            port:
                                number: 3000
                # Client UI
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: client-service
                            port:
                                number: 3000
