infra/rabbit-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: rabbit.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbit-cluster
                port:
                  number: 15672
